--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    app:cardCornerRadius="8dp"
+    app:cardUseCompatPadding="true">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/imageViewPoster"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@null"
             android:adjustViewBounds="true"
-
+            android:contentDescription="@null"
+            app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars">
 
         </ImageView>
+
         <TextView
             android:id="@+id/textViewRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            app:layout_constraintTop_toTopOf="@id/imageViewPoster"
-            app:layout_constraintEnd_toEndOf="@id/imageViewPoster"
-            tools:text="8.9"
+            android:background="@drawable/rating_green"
             android:textSize="30sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@id/imageViewPoster"
+            app:layout_constraintTop_toTopOf="@id/imageViewPoster"
 
-            android:background="@drawable/rounded_corner"
-            >
+            tools:text="8.9">
 
         </TextView>
     </androidx.constraintlayout.widget.ConstraintLayout>
