updated loadmovies so no copy films will get into list (API might duplicate some of the films)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.MainActivity">
+    tools:context=".UI.Activitys.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewMovieItem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:listitem="@layout/movie_item"
+        >
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -24,6 +26,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible"
 
-        ></ProgressBar>
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
