--- a/app/src/main/res/layout/fragment_movie_descrip.xml
+++ b/app/src/main/res/layout/fragment_movie_descrip.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".UI.Activitys.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/testID">
 
         <ImageView
-            android:id="@+id/imageViewPoster"
+            android:id="@+id/imageViewPosterfragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -30,7 +32,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageViewPoster"
+            app:layout_constraintTop_toBottomOf="@id/imageViewPosterfragment"
             tools:text="Movie Name">
 
         </TextView>
@@ -45,7 +47,7 @@
             android:textSize="16sp"
             android:textStyle="italic"
             app:layout_constraintStart_toEndOf="@id/textViewMovieName"
-            app:layout_constraintTop_toBottomOf="@id/imageViewPoster"
+            app:layout_constraintTop_toBottomOf="@id/imageViewPosterfragment"
             tools:text="2017">
 
         </TextView>
