--- a/app/src/main/res/layout/fragment_movie_descrip.xml
+++ b/app/src/main/res/layout/fragment_movie_descrip.xml
@@ -19,7 +19,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars">
+            tools:src="@tools:sample/avatars"
+            android:layout_margin="5dp"
+            >
 
         </ImageView>
 
