--- a/app/src/main/res/layout/fragment_movie_descrip.xml
+++ b/app/src/main/res/layout/fragment_movie_descrip.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Fragments.MovieDescripFragment">
+    tools:context=".UI.Fragments.MovieDescripFragment"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -66,6 +67,7 @@
             tools:text="Description">
 
         </TextView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
