--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Fragments.MovieListFragment">
+    tools:context=".presentation.Fragments.MovieListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewMovieItem"
