--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible"
-        tools:context=".UI.Activitys.MainActivity"
+        tools:context=".presentation.Activitys.MainActivity"
         tools:layout="@layout/fragment_movie_list" />
 
 
